fix: sticky header on mobile, allow mobile menu and search to function on movie detail page

--- a/css/style.css
+++ b/css/style.css
@@ -85,7 +85,6 @@ body.light-theme {
 html {
   box-sizing: border-box;
   scroll-behavior: smooth;
-  overflow-x: hidden;
 }
 
 *, *::before, *::after {
@@ -102,7 +101,6 @@ body {
   line-height:            1.6;
   -webkit-font-smoothing: antialiased;
   transition: background-color var(--transition-slow), color var(--transition-slow);
-  overflow-x: hidden;
   overflow-wrap: break-word;
 }
 
